--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
       max-request-size: 10MB
 
 server:
-  port: 8080
+  port: 8040
 
 app:
   jwt:
@@ -36,7 +36,7 @@ app:
 
   # CORS allowed origins (koma-separator), override via APP_CORS_ALLOWED_ORIGINS
   cors:
-    allowed-origins: ${APP_CORS_ALLOWED_ORIGINS:https://tny.uctech.online,http://tny.uctech.online,http://localhost:3000,http://localhost:5173,http://localhost:8083}
+    allowed-origins: ${APP_CORS_ALLOWED_ORIGINS:https://tny.uctech.online,http://tny.uctech.online,http://localhost:3000,http://localhost:5173,http://localhost:8041,http://localhost:8083}
 
 springdoc:
   swagger-ui:
